project2/test/test_11713020_2.out
Error type 1 at Line 4: undefined variable: b
Error type 5 at Line 4: unmatching type on both sides of assignment
