project2/test/test_11713020_2.spl
int test_11713020_2()
{
  int a[3][1];
  a[3][0] = b;
  return 0;
}